--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -1,8 +1,12 @@
-# https://taskfile.dev
-
 version: "3"
 
 tasks:
+  compile:
+    env:
+      MIX_ENV: dev
+    cmds:
+      - mix deps.get
+      - mix clean;mix compile
   build:
     env:
       MIX_ENV: dev
